# arcanum-ce

./: README.md
first_party/bink_compat/: CMakeLists.txt
first_party/bink_compat/src/: bink_compat_ffmpeg.c
first_party/tig/include/tig/: button.h  video.h
first_party/tig/src/: button.c  core.c  font.c  message.c  movie.c  video.c  window.c
src/: main.c
src/game/: highres_config.c  highres_config.h  quest.c  script.c  scroll.c  scroll.h  tb.c  tc.c  tc.h
src/ui/: charedit_ui.c  dialog_ui.c  intgame.c  intgame.h  inven_ui.c  logbook_ui.c  mainmenu_ui.c  mainmenu_ui.h  schematic_ui.c  wmap_ui.c  written_ui.c
